# py_bump_generator

./: .gitignore  .gitmodules  VBumpDef.py  createRectangularArea.py  fileManipulation.py  install.md  jy_case_convert_to_vbump.py  main.py  main_ui.py  model_Run1.h5  model_Run1.vbump  pyproject.toml  read_dxf_circles.py  readme.md  requirements.txt  vbumps2WDL.py  vbumpsManipulation.py
VBump/: Basic.py  CreateRectangularArea.py  DXFImport.py  ExportVTP.py  ExportWDL.py  FileManip.py  H5Manip.py  VBumpPlot.py  VBumpsManip.py
archived/: DXF_Circle_Extraction_Spec.md  read_dxf_circles.py
customized/: IGSReader.py  jy_case_convert_to_vbump.py
ui/: __init__.py  dialogs.py  logic.py  main_window.py  streaming.py
