[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-bump-generator"
version = "0.1.0"
description = "A toolkit for creating and managing virtual solder bumps (v-bumps)"
readme = "readme.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Stan Chung"}
]
dependencies = [
    "h5py>=3.11.0",
    "ezdxf>=1.3.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "PySide6>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.scripts]
v-bump-cli = "main:main"
v-bump-gui = "main_ui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["VBump*", "ui*"]
